Fix divide by zero warning in TextureMapperLayer https://bugs.webkit.org/show_bug.cgi?id=247033

Reviewed by NOBODY (OOPS!).

The `toPositive` lambda creates a point where the `w` component is `0`.
In `boundingBoxPPN` the results of `toPositive` are padded to
`boundingBoxPPP` which has a division using the `w` component which is
set to `0`.

Found by a warning in Visual Studio. Updated the ASSERT to be `> 0`.

* Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp: